@@ -1,25 +1,25 @@
 /*-------------------------------------------------------------------------
 
-  SDCCglue.h - glues everything we have done together into one file.                 
+  SDCCglue.h - glues everything we have done together into one file.
                 Written By -  Sandeep Dutta . sandeep.dutta@usa.net (1998)
-		
+
    This program is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by the
    Free Software Foundation; either version 2, or (at your option) any
    later version.
-   
+
    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
-   
+
    You should have received a copy of the GNU General Public License
    along with this program; if not, write to the Free Software
    Foundation, 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
-   
+
    In other words, you are welcome to use, share and improve this program.
    You are forbidden to forbid anyone else to use, share and improve
-   what you give them.   Help stamp out software-hoarding!  
+   what you give them.   Help stamp out software-hoarding!
 -------------------------------------------------------------------------*/
 #include "SDCCglobl.h"
 #include "SDCCmem.h"
@@ -37,6 +37,7 @@ int printIvalCharPtr (symbol *, sym_link *, value *, FILE *);
 extern symbol *interrupts[];
 extern set *publics;
 extern set *tmpfileSet;
+extern set *tmpfileNameSet;
 
 void rm_tmpfiles (void);
 int 
